--- a/web/frontend/rl-astro-docs/.gitignore
+++ b/web/frontend/rl-astro-docs/.gitignore
@@ -1,15 +1,17 @@
 # build output
-dist
-.vercel/
+dist/
+# generated types
+.astro/
 
 # dependencies
 node_modules/
-.snowpack/
 
 # logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+
 
 # environment variables
 .env
@@ -17,12 +19,3 @@ yarn-error.log*
 
 # macOS-specific files
 .DS_Store
-
-# vscode settings and dictionaries
-.vscode
-
-# Package Lock (for Vercel)
-package-lock.json
-
-# webstorm settings and dictionaries
-.idea
