--- a/.github/workflows/verify-node.yml
+++ b/.github/workflows/verify-node.yml
@@ -71,6 +71,8 @@ jobs:
       - name: Test (v${{ matrix.node-version }})
         working-directory: ./web/backend/rl-nestjs-mono
         run: yarn run test
+        env:
+          STRIPE_API_KEY: ${{ secrets.STRIPE_API_KEY }}
 
   sonarcloud-analysis-backend:
     name: SonarCloud Backend (v${{ matrix.node-version }})
@@ -98,6 +100,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          STRIPE_API_KEY: ${{ secrets.STRIPE_API_KEY }}
         with:
           projectBaseDir: web/backend/rl-nestjs-mono
           args: -Dsonar.projectKey=jonathan-lee-devel_roomyledger-rl-nestjs-mono
