--- a/.github/workflows/verify-node.yml
+++ b/.github/workflows/verify-node.yml
@@ -95,12 +95,13 @@ jobs:
       - name: Run Tests
         working-directory: ./web/backend/rl-nestjs-mono
         run: yarn run test:cov
+        env:
+          STRIPE_API_KEY: ${{ secrets.STRIPE_API_KEY }}
       - name: SonarCloud Scan
         uses: sonarsource/sonarcloud-github-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          STRIPE_API_KEY: ${{ secrets.STRIPE_API_KEY }}
         with:
           projectBaseDir: web/backend/rl-nestjs-mono
           args: -Dsonar.projectKey=jonathan-lee-devel_roomyledger-rl-nestjs-mono
