--- a/.github/workflows/verify-node.yml
+++ b/.github/workflows/verify-node.yml
@@ -105,11 +105,6 @@ jobs:
         working-directory: ./web/backend/rl-nestjs-mono
         run: yarn run test:cov
         env:
-          STRIPE_API_KEY: ${{ secrets.STRIPE_API_KEY }}
-
-      - name: SonarCloud Scan
-        uses: sonarsource/sonarcloud-github-action@master
-        env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           STRIPE_API_KEY: ${{ secrets.STRIPE_API_KEY }}
@@ -121,6 +116,11 @@ jobs:
           SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
           SUPABASE_JWT_SECRET: ${{ secrets.SUPABASE_JWT_SECRET }}
           SUPABASE_SERVICE_KEY: ${{ secrets.SUPABASE_SERVICE_KEY }}
+      - name: SonarCloud Scan
+        uses: sonarsource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
           projectBaseDir: web/backend/rl-nestjs-mono
           args: -Dsonar.projectKey=jonathan-lee-devel_roomyledger-rl-nestjs-mono
