--- a/web/frontend/rl-angular-spa/package.json
+++ b/web/frontend/rl-angular-spa/package.json
@@ -37,6 +37,7 @@
     "eslint": "^8.57.0",
     "flagsmith": "^9.0.5",
     "karma-coverage-istanbul-reporter": "^3.0.3",
+    "luxon": "^3.6.0",
     "moment": "^2.30.1",
     "ngx-cookie-service": "^19.1.2",
     "primeflex": "^4.0.0",
@@ -61,6 +62,7 @@
     "@ngrx/eslint-plugin": "^19.0.1",
     "@playwright/test": "^1.51.0",
     "@types/jasmine": "^5.1.7",
+    "@types/luxon": "^3.4.2",
     "@types/node": "^22.13.10",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.26.1",
