--- a/web/backend/rl-nestjs-mono/package.json
+++ b/web/backend/rl-nestjs-mono/package.json
@@ -19,55 +19,55 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
   },
   "dependencies": {
-    "@faker-js/faker": "^9.6.0",
-    "@nestjs/common": "^11.0.11",
-    "@nestjs/config": "^4.0.1",
-    "@nestjs/core": "^11.0.11",
+    "@faker-js/faker": "^9.8.0",
+    "@nestjs/common": "^11.1.2",
+    "@nestjs/config": "^4.0.2",
+    "@nestjs/core": "^11.1.2",
     "@nestjs/event-emitter": "^3.0.1",
     "@nestjs/jwt": "^11.0.0",
-    "@nestjs/mapped-types": "*",
+    "@nestjs/mapped-types": "2.1.0",
     "@nestjs/passport": "^11.0.5",
-    "@nestjs/platform-express": "^11.0.11",
-    "@nestjs/swagger": "^11.0.6",
+    "@nestjs/platform-express": "^11.1.2",
+    "@nestjs/swagger": "^11.2.0",
     "@nestjs/throttler": "^6.4.0",
-    "@prisma/client": "^6.5.0",
-    "@supabase/supabase-js": "^2.49.1",
+    "@prisma/client": "^6.9.0",
+    "@supabase/supabase-js": "^2.49.10",
     "@types/nodemailer": "^6.4.17",
     "@types/uuid": "^10.0.0",
-    "bcrypt": "^5.1.1",
+    "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
-    "helmet": "^8.0.0",
-    "luxon": "^3.5.0",
+    "class-validator": "^0.14.2",
+    "helmet": "^8.1.0",
+    "luxon": "^3.6.1",
     "nestjs-supabase-auth": "^1.0.9",
-    "nodemailer": "^6.10.0",
+    "nodemailer": "^7.0.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
-    "pg": "^8.14.0",
+    "pg": "^8.16.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
-    "stripe": "^17.7.0",
+    "stripe": "^18.2.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^11.0.5",
-    "@nestjs/schematics": "^11.0.2",
-    "@nestjs/testing": "^11.0.11",
+    "@nestjs/cli": "^11.0.7",
+    "@nestjs/schematics": "^11.0.5",
+    "@nestjs/testing": "^11.1.2",
     "@suites/di.nestjs": "^3.0.1",
     "@suites/doubles.jest": "^3.0.1",
     "@suites/unit": "^3.0.1",
-    "@testcontainers/postgresql": "^10.20.0",
+    "@testcontainers/postgresql": "^11.0.0",
     "@types/bcrypt": "^5.0.2",
-    "@types/express": "^5.0.0",
+    "@types/express": "^5.0.2",
     "@types/jest": "^29.5.14",
-    "@types/luxon": "^3.4.2",
-    "@types/node": "^22.13.10",
+    "@types/luxon": "^3.6.2",
+    "@types/node": "^22.15.30",
     "@types/passport-jwt": "^4.0.1",
-    "@types/pg": "^8.11.11",
+    "@types/pg": "^8.15.4",
     "@types/stripe": "^8.0.417",
-    "@types/supertest": "^6.0.2",
-    "@typescript-eslint/eslint-plugin": "^8.26.1",
-    "@typescript-eslint/parser": "^8.26.1",
+    "@types/supertest": "^6.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.33.1",
+    "@typescript-eslint/parser": "^8.33.1",
     "add": "^2.0.6",
     "eslint": "^8.42.0",
     "eslint-config-google": "^0.14.0",
@@ -77,11 +77,11 @@
     "jest": "^29.7.0",
     "jest-serial-runner": "^1.2.1",
     "prettier": "^3.5.3",
-    "prisma": "^6.5.0",
+    "prisma": "^6.9.0",
     "source-map-support": "^0.5.21",
-    "supertest": "^7.0.0",
-    "testcontainers": "^10.20.0",
-    "ts-jest": "^29.2.6",
+    "supertest": "^7.1.1",
+    "testcontainers": "^11.0.0",
+    "ts-jest": "^29.3.4",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
