--- a/web/frontend/rl-angular-spa/package.json
+++ b/web/frontend/rl-angular-spa/package.json
@@ -35,7 +35,6 @@
     "angular-shepherd": "^19.0.2",
     "dotenv": "^16.4.7",
     "eslint": "^8.57.0",
-    "flagsmith": "^9.0.5",
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "luxon": "^3.6.0",
     "moment": "^2.30.1",
@@ -47,6 +46,7 @@
     "rxjs": "~7.8.2",
     "tslib": "^2.8.1",
     "uuid": "^11.1.0",
+    "zenigo-client-sdk": "^0.0.8",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
